# template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
