[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
authors = ["Trasee HQ <hq@trasee.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 88
extend-ignore = ["E203", "E231"]

[tool.pytest.ini_options]
addopts = "--color=yes"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = "True"
